# vscode-demo-project-c

./: .gitignore  CMakeLists.txt
include/: functions.h  my_math.h
src/: CMakeLists.txt  functions.c  main.c  my_math.c
test/: CMakeLists.txt  test_functions.c  test_my_math.c
